Issue 7: Inter swarmlet routing (#19)
* Saving ongoing progress.

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>

* issue-7-inter-swarmlet-routing

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>

* Store current progress.

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>

* Pushing ongoing work.

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>

* First version of swarmlet request routing for PUTs.

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>

* First version of GET routing.

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>

* Fixed content length after processing streamlets in PUTs.

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>

* Fixed tests

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>

* Address PR comments.

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>

---------

Signed-off-by: Raúl Gracia <raul.gracia@dell.com>
Co-authored-by: Raúl Gracia <raul.gracia@dell.com>